--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,16 +1,11 @@
 body{
-    background-color: blanchedalmond;
+    background-color: rgb(206, 212, 214);
 }
 .container{
     margin:30px auto;
-    background-color: rgb(206, 212, 214);
-    border-radius:1rem;
-    border: 5px solid rgb(106, 107, 110);
+    border-radius:5px ;
 }
 
-.wrapper{
-    background-color: lightgreen;
-}
 
 .invisible{
     display: none;
@@ -24,11 +19,11 @@ body{
     background-color: rgb(132, 192, 226);
     position: relative;
     margin:20px auto;
-    height: 150px;
+    height: 100px;
     width: 100%;
-    border-radius:5em;
+    border-radius:1px;
     cursor: pointer;
-    border:4px solid rgb(106, 107, 110);;
+    box-shadow: -1px -1px 9px #9c9494eb;
 }
 .channel-button:hover{
     transform: scale(1.05);
@@ -41,18 +36,21 @@ body{
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-    font-size: 30px;
-    color: rgb(227, 241, 21);
+    font-size: 20px;
+    color: rgb(0, 0, 0);
 }
 
 .article-wrapper{
     padding: 20px;
     margin:15px;
-    background-color: rgb(164, 248, 179);
-    border-radius: 10px;
-    border:3px solid rgb(3, 53, 24);
+    /* background-color: rgb(36, 38, 59); */
+    /* border: 1px solid rgb(3, 53, 24); */
+    box-shadow: -1px -1px 45px grey;
 }
+.article-wrapper h2 {
 
+    padding-bottom: 30px;
+}
 article p{
     margin :0 5%;
     font-size: 15px;
@@ -82,16 +80,17 @@ a{
     background-color:rgb(145, 96, 12);
 }
 img {
-    border: 3px solid rgb(32, 46, 5);
+
     display: block;
     margin: 0 auto 20px;
     max-width: 100%;
     max-height: 250px;
-    border-radius: 15px;
+    border-radius: 10px;
+    box-shadow: -1px -1px 45px grey;
 }
 
 .loading-indicator{
     text-align: center;
     font-size: 45px;
-    color:red;
+    color:gray;
 }
